fix: select input contrast issue (resolves #1477) (#1481)
fix: select input contrast issue

--- a/resources/css/components/_input.css
+++ b/resources/css/components/_input.css
@@ -19,6 +19,10 @@ select {
     width: 100%;
 }
 
+option {
+    background-color: var(--theme-body-background);
+}
+
 input {
     height: var(--space-12);
 }
